--- a/JS Challenge.html
+++ b/JS Challenge.html
@@ -35,6 +35,15 @@
     			<div class="col">
     			</div>
     		</div>
+    		<div class="row">
+    			<p id="line1"></p>
+    		</div>
+    		<div class="row">
+    			<p id="line2"></p>
+    		</div>
+    		<div class="row">
+    			<p id="line3"></p>
+    		</div>
     	
     	</div>
         
