--- a/JS Challenge.html
+++ b/JS Challenge.html
@@ -36,13 +36,13 @@
     			</div>
     		</div>
     		<div class="row">
-    			<p id="line1"></p>
+    			<h3 id="line1"></h3>
     		</div>
     		<div class="row">
-    			<p id="line2"></p>
+    			<h3 id="line2"></h3>
     		</div>
     		<div class="row">
-    			<p id="line3"></p>
+    			<h3 id="line3"></h3>
     		</div>
     	
     	</div>
