--- a/calculator.html
+++ b/calculator.html
@@ -47,6 +47,7 @@
                   aria-label="First group"
                 >
                   <button
+                    id="b7"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -54,6 +55,7 @@
                     7
                   </button>
                   <button
+                    id="b8"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -61,6 +63,7 @@
                     8
                   </button>
                   <button
+                    id="b9"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -68,8 +71,9 @@
                     9
                   </button>
                   <button
+                    id="bplus"
                     type="button"
-                    class="btn btn-outline-dark"
+                    class="btn btn-outline-success"
                     style="width: 60px; height: 60px"
                   >
                     +
@@ -87,6 +91,7 @@
                   aria-label="First group"
                 >
                   <button
+                    id="b4"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -94,6 +99,7 @@
                     4
                   </button>
                   <button
+                    id="b5"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -101,6 +107,7 @@
                     5
                   </button>
                   <button
+                    id="b6"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -108,8 +115,9 @@
                     6
                   </button>
                   <button
+                    id="bminus"
                     type="button"
-                    class="btn btn-outline-dark"
+                    class="btn btn-outline-success"
                     style="width: 60px; height: 60px"
                   >
                     -
@@ -127,6 +135,7 @@
                   aria-label="First group"
                 >
                   <button
+                    id="b1"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -134,6 +143,7 @@
                     1
                   </button>
                   <button
+                    id="b2"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -141,6 +151,7 @@
                     2
                   </button>
                   <button
+                    id="b3"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -148,8 +159,9 @@
                     3
                   </button>
                   <button
+                    id="bmult"
                     type="button"
-                    class="btn btn-outline-dark"
+                    class="btn btn-outline-success"
                     style="width: 60px; height: 60px"
                   >
                     *
@@ -167,6 +179,7 @@
                   aria-label="First group"
                 >
                   <button
+                    id="b0"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -174,6 +187,7 @@
                     0
                   </button>
                   <button
+                    id="bdot"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -181,6 +195,7 @@
                     .
                   </button>
                   <button
+                    id="bc"
                     type="button"
                     class="btn btn-outline-dark"
                     style="width: 60px; height: 60px"
@@ -188,8 +203,9 @@
                     C
                   </button>
                   <button
+                    id="bdivide"
                     type="button"
-                    class="btn btn-outline-dark"
+                    class="btn btn-outline-success"
                     style="width: 60px; height: 60px"
                   >
                     /
@@ -202,8 +218,9 @@
                 aria-label="Toolbar with button groups"
               >
                 <button
+                  id="bequals"
                   type="button"
-                  class="btn btn-outline-dark"
+                  class="btn btn-outline-primary"
                   style="width: 240px; height: 60px"
                 >
                   =
@@ -215,6 +232,7 @@
         <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4"></div>
       </div>
     </div>
+    <script src="calculator.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
