--- a/calculator.html
+++ b/calculator.html
@@ -23,7 +23,7 @@
       <div class="row mt-5 mb-5">
         <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4"></div>
         <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4">
-          <h1 class="text-secondary text-center">Basic calculator</h1>
+          <h1 class="text-secondary text-center"></h1>
         </div>
         <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4"></div>
       </div>
